@@ -1,9 +1,7 @@
-#--
 # -*- mode: ruby; coding: utf-8 -*-
 # vim: set filetype=ruby ts=2 sw=2 sts=2 fenc=utf-8:
 #
-# copyright (c) 2006, 2007 Kazuhiro NISHIYAMA
-#++
+# copyright (c) 2006, 2007, 2009 Kazuhiro NISHIYAMA
 
 require 'pathname'
 
